# cyber_toolkits

./: .gitignore  CONTRIBUTING.md  LICENSE  ORGANIZATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md
Blueteam Toolkit/: CONTRIBUTING.md  ENHANCEMENT_ROADMAP.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  alerts.py  automation.py  hunt.py  ioc.py  ir.py  logs.py  main.py  mem.py  net.py  pyproject.toml  requirements.txt  setup.py  siem.py  utils.py
Blueteam Toolkit/sigma_rules/: network_anomaly.yml  suspicious_process_creation.yml
Purple Team Toolkit/: CLI_GUIDE.md  CLI_SUMMARY.md  CONTRIBUTING.md  QUICK_START.md  README.md  purple_cli.py  report_output  requirements.txt  setup.py
Purple Team Toolkit/configs/: settings.json
Purple Team Toolkit/configs/scenarios/: basic_recon.yaml  post_exploitation.yaml  web_attack.yaml
Purple Team Toolkit/plugins/: example_plugin.py
Purple Team Toolkit/purple_team_toolkit/: __init__.py  __main__.py  config.py
Purple Team Toolkit/purple_team_toolkit/blue_team/: __init__.py  modules.py  normalization.py
Purple Team Toolkit/purple_team_toolkit/cli/: __init__.py  commands.py
Purple Team Toolkit/purple_team_toolkit/purple_logic/: __init__.py  correlation.py
Purple Team Toolkit/purple_team_toolkit/red_team/: __init__.py  modules.py  payloads.py
Purple Team Toolkit/test_output/: scenario_results.json
Purple Team Toolkit/test_output2/: scenario_results.json
Purple Team Toolkit/test_output3/: scenario_results.json
Purple Team Toolkit/tests/: test_red_team.py
Red Team Toolkit/: KEYLOGGER_IMPROVEMENTS.md  README.md  demo_enhanced_toolkit.py  demo_phase1_enhancements.py  keylogger_cli.py  keylogger_config.ini  red_team_toolkit.py  requirements.txt  test_red_team_toolkit.py
Red Team Toolkit/Presentation_toolkit/: INTERACTIVE_FEATURES.md  INTERFACE_DETECTION.md  QUICK_START.md  README.md  WIRESHARK_ANALYSIS.md  demo_interactive.py  dns_resolve.py  dns_resolve_interactive.py  dns_resolve_interactive_windows.py  dns_resolve_windows.py  enhanced_kali_linux_version.py  enhanced_windows_version.py  requirements.txt  test_toolkit.py
Red Team Toolkit/Progress/: IMPROVEMENTS_SUMMARY.md  PHASE1_BLUETOOTH_RECONNAISSANCE.md  PHASE1_ENHANCEMENTS.md  PHASE2_ENHANCEMENTS.md  PHASE3_ENHANCEMENTS.md  PHASE4_ENHANCEMENTS.md  PHASE6_ENHANCEMENTS.md  PHASE7_ENHANCEMENTS.md  PHASE8_PRODUCTION_READY.md
Red Team Toolkit/Scryper/: README.md  aggressive_bypass_scraper.py  all_endpoints.txt  alternative_scraper.py  api_endpoints.txt  api_testing_scraper.py  bypass_endpoints.txt  content_extraction_scraper.py  debug_quiz.py  direct_quiz_access.py  final_quiz_scraper.py  jmeter_test_plan.py  network_intercept_scraper.py  playwright_quiz_scraper.py  quiz_scraper.py  requirements.txt  session_storage_scraper.py  simple_api_tools.py  test_setup.py  testing_summary.md  time_manipulation_scraper.py  timer_bypass_quiz_scraper.py  tomorrow_scraper.py
Red Team Toolkit/plugins/: bluetooth_reconnaissance.py  bluetooth_tools.py  example_scanner.py  web_tester.py
Red Team Toolkit/tests/: run_tests.py  test_behold_key_log.py  test_plugin_system.py
